# RustyJ

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: AST-Klassendiagramm.drawio  Notizen zum AST.md  Project-Doc.md  README.md  User-Doc.md
lib/: Cargo.toml
lib/src/: lib.rs  types.rs
lib/testcases/: ArithmeticMethods-expected.java  ArithmeticMethods.java  BoolAlg-expected.java  ComplexIf-expected.java  Empty.java  EmptyMethod-expected.java  Fib-expected.java  Fib.java  Fields.java  FullTest-expected.java  FullTest.java  If-expected.java  If.java  IntFields-expected.java  IntFields.java  LocalVarDecl-expected.java  MethodCall-expected.java  MethodCall.java  NamingConflict-expected.java  NamingConflict.java  Negator-expected.java  Negator.java  (+12 more)
src/: JavaGrammar.pest  main.rs  parser.rs  typechecker.rs  types.rs
tests/: ArithmeticMethods-AST.json  ArithmeticMethods-AST.txt  ArithmeticMethods-TAST.json  ArithmeticMethods-TAST.txt  AssignedFields-AST.json  AssignedFields-TAST.txt  BoolAlg-AST.json  BoolAlg-AST.txt  BoolAlg-TAST.json  BoolAlg-TAST.txt  ComplexIf-AST.json  ComplexIf-AST.txt  ComplexIf-TAST.json  ComplexIf-TAST.txt  Empty-AST.json  Empty-AST.txt  Empty-TAST.json  Empty-TAST.txt  Fib-AST.json  Fib-AST.txt  Fib-TAST.json  Fib-TAST.txt  Fib.java  Fields-AST.json  Fields-AST.txt  Fields.java  If-AST.json  If-AST.txt  If-TAST.json  If-TAST.txt  If.java  IntFields-AST.json  IntFields-AST.txt  LocalVarDecl-AST.json  LocalVarDecl-TAST.json  MethodCall-AST.json  MethodCall-AST.txt  MethodCall-TAST.json  MethodCall-TAST.txt  MethodCall.java  (+30 more)
(+115 files in other folders)
