[package]
name = "rusty_j"
version = "0.1.0"
authors = ["Bene <37740907+Nereuxofficial@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
edition = "2021"

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
lib = { path = "lib" }
pest = "2.5.7"
pest_derive = "2.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"